--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.8",
     "typescript": "^4.9.5",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-hash-link": "^2.4.5",
     "@types/styled-components": "^5.1.26"
   }
 }
